# RN-Praxisaufgaben

./: .gitignore  README.md
praxis1/: CMakeLists.txt  webserver.c
praxis1/test/: check_submission.sh
praxis2/: CMakeLists.txt  webserver.c
praxis2/test/: check_submission.sh  test_praxis2.py
praxis3/: CMakeLists.txt  afsdasf.txt  book_1.txt  book_2.txt  data.c  data.h  interop_test.txt  test_complex_text.txt  test_simple_text.txt  valgrind_output_distributor.xml  valgrind_output_worker_0.xml  valgrind_output_worker_1.xml  valgrind_test.txt  zmq_distributor.c  zmq_worker.c  zmqtest.py
praxis3/debug/: test_book_1_n-workers=8_expected.txt  test_simple_text_n-workers=4_expected.txt
